2002-10-09    <karl@gnu.org>

	* doc/texinfo.txi: recommend free software directory categories
	(suggestion from rms),
        more info about @noindent (fut_nis@d3.dion.ne.jp and ryk@dspwiz.com),
        version specification (spectorhome@rcn.com).

	* makeinfo/{cmds,footnote,html,insertion,makeinfo,multi,node}.c:
	use <br /> instead of plain <br>, for the sake of XHTML.  Likewise
        with <hr /> and <meta />, and quote all <meta> values.
        Suggestion (and assurance of compatibility) from 
        Janis Johnson <janis187@us.ibm.com>
        and Gerald Pfeifer <pfeifer@dbai.tuwien.ac.at>
        (the gcc web page maintainers).

	* util/infosrch: new contrib script.
	* util/Makefile.am (EXTRA_DIST): add infosrch.

2002-10-04    <karl@gnu.org>

	* configure.ac: pretest version 4.2a.

	* TODO: more info on dir categories.

2002-10-02    <karl@gnu.org>

	* doc/.cvsignore: ignore tex output files.

	* util/dir-example: remove unused categories, etc.

2002-10-01    <karl@gnu.org>

	* doc/texinfo.tex (\xml,\ifxml): more \doignore's.
	(\copying,\insertcopying): new implementation to save the uninterpreted
	tokens instead of typesetting a box, so that the page size, fonts,
	etc., don't have to be defined before @copying is run.
	
	These changes from Werner Lemberg <wl@gnu.org>:
	(\internalpagesizes): take two new arguments for the physical paper
	height and width.
	(\smallbook,\afourpaper,\afivepaper,\letterpaper,\afourwide,
 	 \pagesizes): pass them.

2002-09-30    <karl@gnu.org>

	* util/texi2dvi: doc fixes.

	* README: mention autoreconf.

2002-09-29    <karl@gnu.org>

	* doc/texinfo.tex (\pdfmakeoutlines): call \turnoffactive to handle all special characters
	except \{}.
	(\normalturnoffactive): call \turnoffactive instead of repeating all the
	redefinitions.

	* doc/texinfo.tex (\afourpaper, \afourlatex, \afourwide): new
		formatting values.
	From: Eric.Belpaire@equant.com, 30 Aug 2002 19:03:30 +0200.

	* aclocal.m4: $Id now omitted.
