@@ -1,3 +1,8 @@
+2002-10-10    <karl@gnu.org>
+
+	* makeinfo/cmds.c (cm_tie): new fn for new cmd @tie{}.
+	* doc/texinfo.txi: document it.
+
 2002-10-09    <karl@gnu.org>
 
 	* doc/texinfo.txi: recommend free software directory categories
